fixed projectcards spacing

--- a/source/stylesheets/header.css.scss
+++ b/source/stylesheets/header.css.scss
@@ -4,7 +4,7 @@ header {
   align-items: baseline;
   z-index: 12;
   width: 95vw;
-  min-width: 375px;
+  // min-width: 375px;
   margin: 0 auto;
 }
 
