--- a/source/stylesheets/projectcards.css.scss
+++ b/source/stylesheets/projectcards.css.scss
@@ -3,7 +3,7 @@ projectcards{
 }
 .project-cards {
   width: 100%;
-  // height: 70vh;
+  height: 70vh;
   display: grid;
   margin: 0 auto;
   margin-top: 4rem;
@@ -72,9 +72,13 @@ projectcards{
     flex-direction: column;
     grid-template-rows: auto!important;
     grid-template-columns: auto!important;
-    margin-top: 4rem;
+
     background-position: left bottom;
-    // height: 100%;
+    height: auto;
+    width: 95%;
+    margin: 0 auto;
+      margin-top: 4rem;
+
 
     .project-card {
     width:100%;
@@ -82,6 +86,7 @@ projectcards{
   }
   .project-title {
     display: block;
+    font-size: 2rem;
   }
 
       }
